argocd/apps/media-server/overseerr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: lscr.io/linuxserver/overseerr:latest@sha256:4aa0e08b6b4f857194038c93b3cd7c243501006076d2bfbd2c750f15e7539821
          imagePullPolicy: IfNotPresent
          name: overseerr
          resources:
            limits:
              cpu: 150m
              memory: 750Mi
            requests:
              cpu: 10m
              memory: 250Mi
          ports:
            - containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
          startupProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          hostPath:
            path: /zpool/k8s/overseerr/config
          # persistentVolumeClaim:
          #   claimName: config
