argocd/apps/media-server/overseerr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: overseerr-app
  name: overseerr-vs-idx-0
  namespace: overseerr
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - overseerr.yanello.net
  rules:
  - backendRefs:
    - name: overseerr
      namespace: overseerr
      port: 5055
