argocd/apps/media-server/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  ingressClassName: istio
  rules:
    - host: overseerr.yanello.net
      http:
        paths:
          - backend:
              service:
                name: overseerr
                port:
                  number: 5055
            path: /
            pathType: Prefix
